ingress-resource-rule-path.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress-resource-2","namespace":"default"},"spec":{"rules":[{"host":"ndz.abtest.tk","http":{"paths":[{"backend":{"serviceName":"wisilica-api","servicePort":8080},"path":"/"},{"backend":{"serviceName":"wisilica-api","servicePort":8080},"path":"/api"}]}}]},"status":{"loadBalancer":{}}}
    name: ingress-resource-2
    namespace: default
    resourceVersion: "2126817"
    selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/ingress-resource-2
    uid: 7deb4e99-1edb-4398-a0b0-44f5a4f1f151
  spec:
    rules:
    - host: ndz.abtest.tk
      http:
        paths:
        - backend:
            serviceName: wisilica-api
            servicePort: 8080
          path: /
        - backend:
            serviceName: wisilica-api
            servicePort: 8080
          path: /api
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
